GNOME Bugzilla – Bug 684356
gcr-viewer: Clear and focus password entry when password invalid
Last modified: 2019-02-22 11:59:41 UTC
Focus the password entry and clear it when invalid password typed.
Created attachment 224707 [details] [review] gcr-viewer: Clear and focus password entry when password invalid * When user tries to unlock something in the gcr-viewer, and types an invalid password, focus the password entry, and clear it.
Merged into master.