gcr-viewer: Clear and focus password entry when password invalid

* When user tries to unlock something in the gcr-viewer, and
   types an invalid password, focus the password entry, and
   clear it.

https://bugzilla.gnome.org/show_bug.cgi?id=684356